# multipart

./: CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt  main.cpp
include/ert/multipart/: Consumer.hpp
src/: CMakeLists.txt  Consumer.cpp
